# dotdeps

./: .gitignore  CHANGELOG.md  Cargo.toml  PRD.md  README.md  lefthook.yml  release-plz.toml
.github/workflows/: ci.yml
.ralph/: prd.json  progress.txt  prompt.md  run.sh
examples/: test_deps.rs  test_install.rs  test_install_cached.rs
help/: uses.txt
src/: api.rs  cache.rs  cli.rs  config.rs  context.rs  deps.rs  download.rs  formula.rs  git.rs  go.rs  init.rs  install.rs  lib.rs  lock.rs  lockfile.rs  main.rs  node.rs  output.rs  paths.rs  python.rs  ruby.rs  rust.rs  settings.rs  swift.rs  system.rs  tap.rs  update.rs
src/commands/: alias.rs  analytics.rs  audit.rs  autoremove.rs  bottle.rs  bump.rs  bump_cask_pr.rs  bump_formula_pr.rs  bump_revision.rs  bump_unversioned_casks.rs  bundle.rs  cache.rs  caskroom.rs  casks.rs  cat.rs  cellar.rs  cleanup.rs  command.rs  command_not_found_init.rs  completions.rs  config.rs  contributions.rs  create.rs  debugger.rs  deps.rs  desc.rs  determine_test_runners.rs  developer.rs  dispatch_build_bottle.rs  docs.rs  doctor.rs  edit.rs  env.rs  extract.rs  fetch.rs  formula.rs  formula_analytics.rs  formulae.rs  generate_analytics_api.rs  generate_cask_api.rs  (+84 more)
src/go/: lockfile.rs
src/node/: lockfile.rs  npm.rs
src/python/: lockfile.rs  pypi.rs
src/ruby/: lockfile.rs  rubygems.rs
src/rust/: crates_io.rs  lockfile.rs
src/swift/: lockfile.rs
tests/: e2e.rs
tests/e2e/: harness.rs  scenarios.rs
