[package]
name = "dotdeps"
version = "0.1.0"
edition = "2024"
description = "CLI tool that fetches dependency source code for LLM context"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
ureq = "3"
