[package]
name = "dotdeps"
version = "0.1.4"
edition = "2024"
description = "CLI tool that fetches dependency source code for LLM context"
license = "MIT"
readme = "README.md"
repository = "https://github.com/davidturnbull/dotdeps"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
thiserror = "2"
toml = "0.8"
ureq = "3"
fs2 = "0.4"
tar = "0.4"
xz2 = "0.1"

[target.'cfg(windows)'.dependencies]
zip = "0.6"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
